Updates for Node v8
- Upgrade to Express 4
- Copy Buffers that change before each write in a series
- Fix uses of deprecated new Buffer()
- Remove dependency on "futures" package
- While I'm at it:
  - Fix internal server error on invalid slice number
  - Gzip-compress all responses, including GIFs
  - Updated README.md file

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "gifsimon",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "dependencies": {
-    "express": "2.5.x",
-    "futures": "2.3.x"
+    "compression": "1.x",
+    "cookie-parser": "1.x",
+    "express": "4.x"
   },
   "engines": {
-    "node": "0.6.x"
+    "node": "8.x"
   }
 }
